# the_fetch_land_project

./: .env.sample  .gitignore  Cargo.toml  build_fe.sh  migration.sh  small_hm.json
backend/: .env.sample  Cargo.toml  README.md
backend/migrations/2022-09-03-082452_initial_setup/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: auth_hook.rs  card_id.rs  card_name.rs  card_sales.rs  card_sales_id.rs  card_sales_latest.rs  card_sales_name.rs  card_sales_num.rs  card_sales_paged.rs  mod.rs  notification_telegram.rs  user_credentials.rs  user_delete.rs  user_get.rs  user_sale_delete.rs  user_sale_edit.rs  user_sale_new.rs  user_sales.rs  user_subscription.rs  user_subscription_delete.rs  user_subscription_new.rs  user_update.rs
backend/src/database/: models.rs  schema.rs
backend/src/models/: card.rs  mod.rs  sale.rs  subscription.rs  trie.rs  user.rs
backend/src/services/: auth_jwt.rs  card_cache.rs  database.rs  mail.rs  mod.rs  scryfall.rs  subscription.rs  telegram.rs
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  run_ssr_prod_server.sh  server.ts
frontend/The_Fetch_Land_Project/: angular.json
frontend/css/: mystyles.css
frontend/src/: colors.scss  index.html  robots.txt  styles.sass  styles.scss
migrations/2022-09-03-082452_initial_setup/: down.sql  up.sql
src/: main.rs
src/api/: auth.rs  auth_login.rs  card_id.rs  card_name.rs  mod.rs  test.rs  token.rs  update_user.rs  user_delete.rs  user_get.rs  user_sale_delete.rs  user_sale_new.rs  user_update.rs
src/database/: database_handler.rs  mod.rs  (+2 more)
(+98 files in other folders)
