[package]
name = "the_fetch_land_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"]}
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.2"
openssl = "0.10"
oauth2 = "4.2"
jsonwebtoken = "8.1.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
serde_any = "0.5.0" # JSON save and load to FS
once_cell = "1.10.0" # lazy mutex
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9.0"
chrono = { version = "0.4", features = ["serde"] } # date
diesel = { version = "1.4.8", features = ["sqlite", "uuid", "r2d2"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

teloxide = { version = "0.9", features = ["macros", "auto-send"] }
bincode = "1.3.3"